fixing width of scrollbar thumb

--- a/css/dash.css
+++ b/css/dash.css
@@ -238,7 +238,7 @@ body.modal-open {
 
 /* For Chrome, Safari, and Edge */
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 6px;
 }
 
 ::-webkit-scrollbar-track {
